# bible-bawl

./: .env.example  .gitignore  DISTRIBUICAO-LIVRE.md  GUIA-PUBLICACAO.md  LICENSE  MIGRACAO-DO-LINUX.md  ORIGEM-E-ESCOPO.md  PROTECAO-GITHUB.md  README.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: instaladores.yml  validacao.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.test.ts  app.ts  auth.ts  authorization.ts  backup.ts  database.ts  import-legacy.ts  seed.ts  server.ts
apps/cloud/: .dev.vars.example  package.json  wrangler.jsonc
apps/cloud/src/: authorization.test.ts  authorization.ts  database.ts  index.ts  security.ts
apps/web/: .env.aplicativos.example  capacitor.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/android/app/: build.gradle
apps/web/android/app/src/main/java/br/org/biblebawl/app/: MainActivity.java
apps/web/android/app/src/main/res/values/: strings.xml
apps/web/src/: App.vue  db.ts  env.d.ts  main.ts  router.ts  scoring.test.ts  scoring.ts  style.css  types.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src/stores/: app.ts
apps/web/src/views/: CompetitionView.vue  DashboardView.vue  HelpersView.vue  LoginView.vue  PanelView.vue  ProfileView.vue  ResultsView.vue  TeamsView.vue  UsersView.vue
scripts/: diagnostico.mjs
